# ai_study

./: .gitignore  Makefile  README.md  pyproject.toml
a_fundamentos/: README.md
a_fundamentos/classificacao/: ALGO.md
a_fundamentos/preparacao_dados/: README.md
a_fundamentos/regressao/: ALGO.md  README.md
b_algoritmos/classificacao/: 00_naiveBayes_insurance.ipynb
b_algoritmos/regressao/: 00_regressaoLinear.ipynb  01_carro.ipynb
docs/: README.md  conceitos.md  glossario.md
docs/agrupamentos/: README.md
docs/classificacao/: README.md
udemy/a_fundamentos/: README.md  glossario.md
udemy/a_fundamentos/associacao/: README.md
udemy/a_fundamentos/classificacao/: README.md
udemy/a_fundamentos/decision_tree/: README.md
udemy/a_fundamentos/regressao/: ALGO.md  README.md
udemy/b_algoritmos/classificacao/: 00_naiveBayes_insurance.ipynb
