[project]
name = "ai-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabio Kfouri",email = "kfouri.fabio@gmail.com"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"

