[project]
name = "ai-study"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabio Kfouri",email = "kfouri.fabio@gmail.com"}
]
readme = "README.md"
requires-python = "~3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"


[tool.poetry.group.ml.dependencies]
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scipy = "^1.15.2"
statsmodels = "^0.14.4"
scikit-learn = "^1.6.1"
yellowbrick = "^1.5"
graphviz = "^0.20.3"


